libsql-server/src/namespace/snapshots/libsql_server__namespace__meta_store__test__enqueue_migration_job-3.snap
---
source: libsql-server/src/namespace/meta_store.rs
expression: rows.next().unwrap().unwrap()
---
{
    Ok(
        "job",
    ): (
        Integer,
        1,
    ),
    Ok(
        "target_namespace",
    ): (
        Text,
        "ns3",
    ),
    Ok(
        "status",
    ): (
        Text,
        "\"Enqueued\"",
    ),
}
